--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                         </tbody>
                     </table>
                     <div class="tm-bid-info-text"><a href="https://fragment.com/about" class="js-howitworks">How does this work?</a></div>
-                    <span class=" tm-bid-info-text">Buyer connected 🟢</span>
+                    <span class=" tm-bid-info-text tm-list-item-title">Buyer connected 🟢 awaiting Seller Connect</span>
                 </div>
                 <div class="tm-list tm-section-box tm-section-auction-info">
                     <dl class="tm-list-item">
