--- a/index.html
+++ b/index.html
@@ -160,7 +160,16 @@
                         </tbody>
                     </table>
                     <div class="tm-bid-info-text"><a href="https://fragment.com/about" class="js-howitworks">How does this work?</a></div>
-                    <span class=" tm-bid-info-text tm-list-item-title">Buyer connected 🟢 awaiting Seller Connect</span>
+                    <table class="table tm-table tm-table-fixed">
+                        <thead>
+                            <tr >
+                                <th style="--width:50%;text-align: center;">Buyer Connected 🟢 <br>Awaiting Seller Connect </th>
+                                <th style="--width:50%;text-align: center;font-size: 12px;"><button class="btn btn-primary js-place-bid-btn ton-connect-trigger btn-go connectWallet" data-bid-amount="7">connect</button></th>
+                                <!-- <th style="--width:35%">Total</th>-->
+                            </tr>
+                        </thead>
+                        
+                    </table>
                 </div>
                 <div class="tm-list tm-section-box tm-section-auction-info">
                     <dl class="tm-list-item">
