--- a/index.html
+++ b/index.html
@@ -164,11 +164,17 @@
                         <thead>
                             <tr >
                                 <th style="--width:50%;text-align: center;">Buyer Connected 🟢 <br>Awaiting Seller Connect </th>
+                                <th style="--width:50%;text-align: center;font-size: 12px;">0x1bd.....6D69</th>
+                                <!-- <th style="--width:35%">Total</th>-->
+                            </tr>
+                        </thead>
+                        <thead>
+                            <tr >
+                                <th style="--width:50%;text-align: center;">Awaiting Seller Connect </th>
                                 <th style="--width:50%;text-align: center;font-size: 12px;"><button class="btn btn-primary js-place-bid-btn ton-connect-trigger btn-go connectWallet" data-bid-amount="7">connect</button></th>
                                 <!-- <th style="--width:35%">Total</th>-->
                             </tr>
                         </thead>
-                        
                     </table>
                 </div>
                 <div class="tm-list tm-section-box tm-section-auction-info">
