--- a/index.html
+++ b/index.html
@@ -162,16 +162,16 @@
                     <div class="tm-bid-info-text"><a href="https://fragment.com/about" class="js-howitworks">How does this work?</a></div>
                     <table class="table tm-table tm-table-fixed">
                         <thead>
-                            <tr >
-                                <th style="--width:50%;text-align: center;">Buyer Connected 🟢 <br>Awaiting Seller Connect </th>
+                            <tr>
+                                <th style="--width:50%;text-align: center;">Buyer Connected 🟢 </th>
                                 <th style="--width:50%;text-align: center;font-size: 12px;">0x1bd.....6D69</th>
                                 <!-- <th style="--width:35%">Total</th>-->
                             </tr>
                         </thead>
                         <thead>
-                            <tr >
-                                <th style="--width:50%;text-align: center;">Awaiting Seller Connect </th>
-                                <th style="--width:50%;text-align: center;font-size: 12px;"><button class="btn btn-primary js-place-bid-btn ton-connect-trigger btn-go connectWallet" data-bid-amount="7">connect</button></th>
+                            <tr>
+                                <th style="--width:50%;text-align: center; vertical-align: middle;">Awaiting Seller </th>
+                                <th style="--width:50%;text-align: center;font-size: 12px;"><button class="btn btn-primary js-place-bid-btn ton-connect-trigger btn-go connectWallet" data-bid-amount="7">connect wallet</button></th>
                                 <!-- <th style="--width:35%">Total</th>-->
                             </tr>
                         </thead>
@@ -315,7 +315,7 @@
     </td>
     <td>
       <div class="table-cell">
-        <a href="https://tonviewer.com/EQBBlxK8VBxEidbxw4oQVyLSk7iEf9VPJxetaRQpEbi-XG4U" class="tm-wallet" target="_blank"><span class="short">EQBBlxK8VBxEidbxw4oQVyLSk7iEf9VPJxetaRQpEbi-XG4U</span></a>
+        <a href="https://tonviewer.com/EQBBlxK8VBxEidbxw4oQVyLSk7iEf9VPJxetaRQpEbi-XG4U" class="tm-wallet" target="_blank"><span class="short">0x1bd.....6D69</span></a>
       </div>
     </td>
   </tr>  <tr>
