--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
         <thead>
           <tr>
             <th style="--thin-width:100px;--wide-width:25%">Deal Status</th>
-            <th style="--thin-width:110px;--wide-width:25%">TON - Username</th>
+            <th style="--thin-width:110px;--wide-width:25%">Crypto - Username</th>
             <th style="--width:50%">Recipient</th>
           </tr>
         </thead>
