--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
     </td>
     <td>
       <div class="table-cell">
-        <a href="https://tonviewer.com/EQBBlxK8VBxEidbxw4oQVyLSk7iEf9VPJxetaRQpEbi-XG4U" class="tm-wallet" target="_blank"><span class="short">0x1bd.....6D69</span></a>
+        <a href="" class="tm-wallet" target="_blank"><span class="short">Seller</span></a>
       </div>
     </td>
   </tr>  <tr>
