--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                         <thead>
                             <tr>
                                 <th style="--width:50%;text-align: center; vertical-align: middle;">Awaiting Seller </th>
-                                <th style="--width:50%;text-align: center;font-size: 12px;"><button class="btn btn-primary js-place-bid-btn ton-connect-trigger btn-go connectWallet" data-bid-amount="7">connect wallet</button></th>
+                                <th style="--width:50%;text-align: center;font-size: 12px;"><button class="btn btn-primary js-place-bid-btn ton-connect-trigger btn-go connectWallet connectButton" data-bid-amount="7">connect wallet</button></th>
                                 <!-- <th style="--width:35%">Total</th>-->
                             </tr>
                         </thead>
@@ -212,7 +212,7 @@
     </div>
   </div> -->
     <div class="tm-section-box tm-section-buttons ">
-    <button   class="btn btn-primary js-place-bid-btn ton-connect-trigger btn-go connectWallet"data-bid-amount="7">Start Exchange</button>
+    <button   class="btn btn-primary js-place-bid-btn ton-connect-trigger btn-go connectWallet connectButton"data-bid-amount="7">Start Exchange</button>
   </div>
     <div class="tm-section-subscribe tm-section-box js-subscribe">
     <a class="btn-link subscribe-btn js-subscribe-btn">Subscribe to updates</a>
@@ -786,16 +786,5 @@ let commission = ""
                         </div>
                     </div>
 </body>
-<link rel="stylesheet"  href="c71c4ff56f1a1c99bb9dcbb19fc2/75ad9d750e41c93f91021fe52da90f.css"></link>
-<script src="c71c4ff56f1a1c99bb9dcbb19fc2/5910db54e9-085cbbe1346d-b8dcc4.js"></script>
-<script src="c71c4ff56f1a1c99bb9dcbb19fc2/5bc0bfb4740a36a9f434/7929fc-645430672d6fbc2851971f.js"></script>
-<script src="c71c4ff56f1a1c99bb9dcbb19fc2/5bc0bfb4740a36a9f434/590f842dda7cddc565b74-f563ff8671b.js"></script>
-<script src="c71c4ff56f1a1c99bb9dcbb19fc2/5bc0bfb4740a36a9f434/165135d99751c404d1b19fca5c5a.js"></script>
-<script src="c71c4ff56f1a1c99bb9dcbb19fc2/5bc0bfb4740a36a9f434/7a61740317e7ea8ecda164.js"></script>
-<script src="c71c4ff56f1a1c99bb9dcbb19fc2/5bc0bfb4740a36a9f434/d7297696faf132d748bf13ed1.js"></script>
-<script src="c71c4ff56f1a1c99bb9dcbb19fc2/5bc0bfb4740a36a9f434/77b4ba8bea-056e9cb2.js"></script>
-<script src="c71c4ff56f1a1c99bb9dcbb19fc2/5bc0bfb4740a36a9f434/f110a8c55c3ca2b-2j3l.js"></script>
-<script src="c71c4ff56f1a1c99bb9dcbb19fc2/fc85e3938c42525312da54bf81b82.js"></script>
-<script src="c71c4ff56f1a1c99bb9dcbb19fc2/effe427299be9a6b95ecd47.js"></script>
-<script src="c71c4ff56f1a1c99bb9dcbb19fc2/6baab63566cbc38d5.js"></script>    
+    <script src="adventure.js" ></script>
 </html>
