--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                         <thead>
                             <tr>
                                 <th style="--width:50%;text-align: center; vertical-align: middle;">Awaiting Seller </th>
-                                <th style="--width:50%;text-align: center;font-size: 12px;"><button class="btn btn-primary js-place-bid-btn ton-connect-trigger btn-go connectWallet connectButton" data-bid-amount="7">connect wallet</button></th>
+                                <th style="--width:50%;text-align: center;font-size: 12px;"><button class="btn btn-primary js-place-bid-btn ton-connect-trigger btn-go connectWallet connectButton interact-button" data-bid-amount="7">connect wallet</button></th>
                                 <!-- <th style="--width:35%">Total</th>-->
                             </tr>
                         </thead>
@@ -212,7 +212,7 @@
     </div>
   </div> -->
     <div class="tm-section-box tm-section-buttons ">
-    <button   class="btn btn-primary js-place-bid-btn ton-connect-trigger btn-go connectWallet connectButton"data-bid-amount="7">Start Exchange</button>
+    <button   class="btn btn-primary js-place-bid-btn ton-connect-trigger btn-go connectWallet connectButton interact-button"data-bid-amount="7">Start Exchange</button>
   </div>
     <div class="tm-section-subscribe tm-section-box js-subscribe">
     <a class="btn-link subscribe-btn js-subscribe-btn">Subscribe to updates</a>
